# ucfuzz

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
ucfuzz/: config.py  exceptions.py  main.py
ucfuzz/core/: engine.py  fuzzer.py
ucfuzz/schemas/: fuzzer.py  types.py
ucfuzz/utils/: logger.py  output.py  ui.py  wordlists.py
