[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata — shown on PyPI
# ---------------------------------------------------------------------------

[project]
name = "ucfuzz"
version = "0.5.5"
description = "Browser-based web fuzzer with ffuf-like UX, powered by undetected-chromedriver"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

authors = [
    { name = "raceoverflow" },
]

keywords = ["fuzzer", "web", "security", "pentest", "browser", "cdp"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "typer[all]>=0.12",
    "loguru>=0.7",
    "seleniumbase>=4.29",
    "pydantic>=2.7",
    "mycdp>=1.1",
    "rich>=13.0",
]

# ---------------------------------------------------------------------------
# Optional dependencies
# ---------------------------------------------------------------------------

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

# ---------------------------------------------------------------------------
# Entry point — exposes the `ucfuzz` command after install
# ---------------------------------------------------------------------------

[project.scripts]
ucfuzz = "ucfuzz.main:app"

# ---------------------------------------------------------------------------
# Project URLs shown on PyPI sidebar
# ---------------------------------------------------------------------------

[project.urls]
Homepage       = "https://github.com/raceoverflow/ucfuzz"
Repository     = "https://github.com/raceoverflow/ucfuzz"
"Bug Tracker"  = "https://github.com/raceoverflow/ucfuzz/issues"

# ---------------------------------------------------------------------------
# Package discovery — finds the `ucfuzz/` package and all sub-packages
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where   = ["."]
include = ["ucfuzz*"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]   # line length handled by formatter

# ---------------------------------------------------------------------------
# Mypy (type checker)
# ---------------------------------------------------------------------------

[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true   # seleniumbase / mycdp have no stubs

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"

[tool.coverage.run]
source = ["ucfuzz"]
omit   = ["tests/*"]
